# Clawlendar

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
agents/: openai.yaml
calendar-bridge/: .dockerignore  README.md  requirements.txt
calendar-bridge/agents/: openai.yaml
calendar-bridge/references/: time-wheel-model.md
calendar-bridge/scripts/: __init__.py  calendar_bridge.py  run_api.sh
docs/: i18n.md  index.html  recipes.md  tool-reference.md  vercel-agent-gateway.md
docs/examples/: README.md  astro_snapshot.json  calendar_month_chinese_lunar.json  capabilities.json  convert_zh_tw.json  day_profile_en.json  day_profile_zh_cn.json  historical_spacetime_snapshot_en.json  life_context_zh_cn.json  now_zh_cn.json  timeline_en.json
references/: calendar-landscape.md  integration-contract.md  mcp-servers-pr-template.md  mvp-release-notes.md
scripts/: api_server.py  calendar_bridge.py  curl_examples.sh
skill/: SKILL.md
src/clawlendar/: __init__.py  __main__.py  bridge.py  server.py
src/clawlender/: __init__.py  __main__.py  server.py
src/clawlender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_endpoints.py  test_bridge_core.py
