[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawlendar"
version = "0.3.1"
description = "Timestamp-first perpetual calendar interop for AI agents — MCP server for cross-calendar conversion across East/West calendar systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Hosuke"},
]
keywords = [
    "mcp",
    "calendar",
    "ai-agent",
    "timestamp",
    "gregorian",
    "minguo",
    "japanese-era",
    "lunar-calendar",
    "solar-terms",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
]
lunar = [
    "lunardate>=0.2.2",
]
extra-calendars = [
    "convertdate>=2.4.0",
]
metaphysics = [
    "lunar-python>=1.4.4",
]
all = [
    "clawlendar[api,lunar,extra-calendars,metaphysics]",
]

[project.scripts]
clawlendar = "clawlendar.server:main"

[project.urls]
Homepage = "https://github.com/Hosuke/Clawlendar"
Repository = "https://github.com/Hosuke/Clawlendar"
Issues = "https://github.com/Hosuke/Clawlendar/issues"

[tool.setuptools.packages.find]
where = ["src"]
